# card_inventory

./: .env.example  .gitignore  README.md  SETUP.md  build.sh  main.py  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
backend/app/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  card_definition.py  inventory_item.py
backend/app/routes/: __init__.py  card_definitions.py  dashboard.py  filters.py  inventory_items.py  upload.py  web.py
backend/app/static/js/: dashboard.js
backend/app/templates/: base.html  card_detail.html  dashboard.html  dashboard_old.html
backend/app/templates/modals/: add_definition.html  add_inventory.html  edit_inventory.html
docs/: DEPLOYMENT.md  Issues.md  req.md
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddInventoryItemModal.jsx  CardDefinitionForm.jsx  CardGrid.jsx  UpdateInventoryItemModal.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/services/: api.js
